Downgrades project to Java 8 after merge.